# ZBE

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  foo.txt  imgui.ini  log.txt  pretty.json  testjson_001.json  us.stackdump
builds/codeblocks/: ZBE.workspace  ZBE.workspace.layout
cmake/: CompilerWarnings.cmake
data/: EMPTY
data/animations/: Directions.bvh  Directions1.bvh  Discussion.bvh  Discussion1.bvh  Eating.bvh  Eating2.bvh  Greeting.bvh  Greeting1.bvh  Phoning.bvh  Phoning1.bvh  Posing.bvh  Posing1.bvh  Purchases.bvh  (+17 more)
nosubir/: notas
src/: CMakeLists.txt
src/ZBE/: CMakeLists.txt  batismain.cpp  degryllmain.cpp  degryllmain.h  ludomain.cpp  ludomain.h  main.cpp
src/ZBE/JSON/: JSONFactory.cpp
src/ZBE/JSON/factories/: JSONFactories.cpp
src/ZBE/JSON/graphics/: JSONGraphicsLoaders.cpp
src/ZBE/JSON/resources/: JSONAudioDefLoader.cpp  JSONGLSLProgramLoader.cpp  JSONGLSLProgramLoaderFtry.cpp  JSONMultiSpriteSheetLoader.cpp  JSONOGLModelSheetLoaders.cpp  JSONSimpleOGLModelSheetLoader.cpp  JSONSimpleOGLModelSheetLoaderFtry.cpp  JSONSpriteOGLModelSheetLoader.cpp
src/ZBE/OAL/daemons/: OALContextDaemon.cpp
src/ZBE/OAL/players/: Sound3DOALPlayer.cpp
src/ZBE/OAL/resources/: OALAudioLoader.cpp
src/ZBE/OAL/system/: OALAudioStore.cpp
src/ZBE/OAL/tools/: OALUtils.cpp
src/ZBE/OGL/daemons/: ShadersSetter.cpp
src/ZBE/OGL/graphics/implementations/: OGLModelSheets.cpp  SimpleOGLModelSheet.cpp
src/ZBE/SDL/OGL/: SDLOGLWindow.cpp
src/ZBE/SDL/OGL/daemons/: OGLPreDrawer.cpp
src/ZBE/SDL/OGL/factories/daemons/: OGLPostDrawFtry.cpp  OGLPreDrawFtry.cpp
src/ZBE/SDL/daemons/: BasicPostLoopSDLDaemon.cpp  BasicPreLoopSDLDaemon.cpp  IOPreLoopSDL.cpp  SDLOGLWindowDaemon.cpp  SDLWindowDaemon.cpp
src/ZBE/SDL/drawers/: AnimatedSpriteSDLDrawer.cpp  RotatedSpriteSDLDrawer.cpp  SimpleSpriteSDLDrawer.cpp  SingleSpriteSDLDrawer.cpp  SingleTextSDLDrawer.cpp  SpriteSheetSDLDrawer.cpp  StatedSpriteSDLDrawer.cpp
src/ZBE/SDL/factories/: SDLFactories.cpp  SDLOGLWindowDmnFtry.cpp  SDLWindowDmnFtry.cpp
src/ZBE/SDL/factories/daemons/: BasicPostLoopSDLDaemonFtry.cpp  BasicPreLoopSDLDaemonFtry.cpp
src/ZBE/SDL/factories/drawers/: SingleTextSDLDrawerFtry.cpp
src/ZBE/SDL/factories/resources/: SDLImgLoaderFtry.cpp
src/ZBE/SDL/factories/system/: SDLOGLWindowFtry.cpp  SDLSysTimeFtry.cpp  SDLWindowFtry.cpp
src/ZBE/SDL/loaders/: SDLFontLoader.cpp
src/ZBE/SDL/starters/: SDL_Starter.cpp
src/ZBE/SDL/system/: SDLEventDispatcher.cpp  SDLImageStore.cpp  SDLNetDispatcher.cpp  SDLSocket.cpp  SDLTextFontStore.cpp  SDLWindow.cpp  Window.cpp
src/ZBE/SDL/tools/: SDLTimer.cpp
src/ZBE/actuators/: MovableBouncer.cpp
src/ZBE/behaviors/: BulletCreatorBhv.cpp  SineOscillator.cpp
src/ZBE/core/: CollisionData.cpp  utf8.cpp  zbe.cpp
src/ZBE/core/SDL2.0/: SDL_Window.cpp  Window.cpp
src/ZBE/core/behaviors/: UniformLinearMotion.cpp
src/ZBE/core/daemons/: BasicPreLoopTimeDaemon.cpp  DaemonMaster.cpp  MainLoop.cpp  StateMachineDaemon.cpp
src/ZBE/core/drawers/SDL/: SimpleSpriteSDLDrawer.cpp
src/ZBE/core/entities/: CollisionableEntity.cpp  CollisionatorEntity.cpp  CollisionerEntity.cpp  Entity.cpp
src/ZBE/core/entities/avatars/: Collisioner.cpp
src/ZBE/core/events/: CollisionEventGenerator.cpp  EventStore.cpp  InputEvent.cpp  InputEventGenerator.cpp  TextEvent.cpp  TimeEventGenerator.cpp
src/ZBE/core/events/generators/: CollisionEventGenerator.cpp  InputEventGenerator.cpp  NetEventGenerator.cpp  TimeEventGenerator.cpp
src/ZBE/core/events/generators/util/: BaseCollisionSelector.cpp  CollisionSelector.cpp  IntersectionCollisionSelector.cpp
src/ZBE/core/events/managers/: InputEventManager.cpp  TimeEventManager.cpp
src/ZBE/core/io/: FileHandler.cpp  InputBuffer.cpp
src/ZBE/core/io/SDL/: SDLInputReader.cpp  SDLInputReaderDEPRECATED.cpp
src/ZBE/core/loaders/: SDLFontLoader.cpp  SDLImageLoader.cpp
src/ZBE/core/starters/: SDL_Starter.cpp
src/ZBE/core/starters/SDL/: SDL_Starter.cpp
src/ZBE/core/system/: AppDEPRECATED.cpp  Logger.cpp  MainLoop.cpp  SysError.cpp  SysIdGenerator.cpp  SysTime.cpp
src/ZBE/core/system/SDL/: SDLEventDispatcher.cpp  Window.cpp
src/ZBE/core/tools/: SDLTimer.cpp
src/ZBE/core/tools/math/: Vector.cpp  Vector2D.cpp  Vector2DCartesian.cpp  Vector2DPolar.cpp
src/ZBE/core/tools/math/collisions/: CollisionData.cpp  intersections.cpp
src/ZBE/core/tools/shared/implementations/: SimpleValue.cpp
src/ZBE/core/tools/text/: utf8.cpp
src/ZBE/core/tools/time/: ContextTime.cpp
src/ZBE/daemons/: RsrcFolderLoaderDmn.cpp  RsrcLoaderDmn.cpp
src/ZBE/entities/builders/: builders.cpp
src/ZBE/events/handlers/input/: ActivatorIH.cpp  KeyDownTicketEnablerIH.cpp  ParametricActivatorIH.cpp  TicketTogglerIH.cpp
src/ZBE/factories/: BaseFactories.cpp  CommonFactories.cpp  ZBEFactories.cpp
src/ZBE/factories/implementations/: RsrcFtry.cpp
src/ZBE/factories/implementations/behaviors/: StateLTEraserBhvFtry.cpp  StateSetterBhvFtry.cpp
src/ZBE/factories/implementations/daemons/: MainLoopExitFtry.cpp  MainLoopFtry.cpp  MasterDmnFtry.cpp  RsrcFolderLoaderDmnFtry.cpp  RsrcLoaderDmnFtry.cpp  StateMachineDmnFtry.cpp
src/ZBE/factories/implementations/entities/: EntityFtry.cpp
src/ZBE/factories/implementations/events/generators/: TimeEventGnFtry.cpp
src/ZBE/factories/implementations/events/handlers/input/: BroadcastIHFtry.cpp  DaemonClickIHFtry.cpp  DaemonIHFtry.cpp  InputToValueFtry.cpp
src/ZBE/factories/implementations/events/handlers/time/: DaemonRecurrentTimeHandlerFtry.cpp  DaemonTimeHandlerFtry.cpp  TicketEraserFtry.cpp
src/ZBE/factories/implementations/tools/graphics/: CameraFtry.cpp
src/ZBE/glTF/resources/: GlTFResourceLoader.cpp  GlTFResourceLoaderFtry.cpp
src/ZBE/resources/: contextname.cpp
src/ZBE/resources/loaders/: ImgFolderLoader.cpp  RsrcFolderLoader.cpp
src/ZBE/resources/loaders/implementations/: JSONAppLoader.cpp
src/ZBE/src/: main.cpp
src/ZBE/sytem/: SimpleLoopBuilder.cpp  SystemResources.cpp
src/ZBE/tools/graphics/: Camera.cpp  CameraFtry.cpp
uml/: Collisions.txt  Entities.txt  Events.txt
(+1714 files in other folders)
